# promptir

./: .pre-commit-config.yaml  AGENTS.md  README.md  build_progression.md  build_specifications.md  pyproject.toml
.github/workflows/: ui.yml
data/: demo_dataset.json
data/demo_datasets/: README.md
data/demo_datasets/document_analysis/: demo_data.json  manifest.json
data/demo_datasets/document_analysis/prompts/document_analyze_map_reduce/: v1.md
data/demo_datasets/document_analysis/prompts/document_analyze_multi/: v1.md
data/demo_datasets/document_analysis/prompts/document_analyze_single/: v1.md
data/demo_datasets/document_analysis/prompts/document_diff/: v1.md
data/demo_datasets/document_analysis/prompts/document_info_verify/: v1.md
data/demo_datasets/document_analysis/prompts/document_questions_extract/: v1.md
data/demo_datasets/local_operations/: demo_data.json  manifest.json
data/demo_datasets/local_operations/prompts/local_create_pdf/: v1.md
data/demo_datasets/local_operations/prompts/local_find/: v1.md
data/demo_datasets/local_operations/prompts/local_grep/: v1.md
data/demo_datasets/local_operations/prompts/tool_section/: v1.md
scripts/: compile_demo_datasets.py  compile_prompts.py
src/llm/prompts/planner/: v1.md
src/llm/prompts/router/: v1.md
src/promptir/: __init__.py  cli.py  compiler.py  demo.py  enrich.py  errors.py  models.py  registry.py  render_jinja2.py  render_simple.py
tests/: test_cli.py  test_compiler.py  test_compiler_validation.py  test_demo.py  test_registry.py
ui/: .dockerignore  .env.example  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  pyproject.toml
ui/backend/: __init__.py  config.py  schemas.py  server.py
ui/backend/routes/: __init__.py  compile.py  infer.py  prompts.py  sessions.py  testcases.py
ui/backend/services/: diff_service.py  prompt_service.py
ui/backend/tests/: conftest.py  test_api_integration.py  test_config.py  test_diff_service.py  test_prompt_service.py
ui/data/: sessions.json
ui/frontend/: .eslintrc.cjs  index.html  package.json  tailwind.config.js  vitest.config.ts
ui/frontend/src/: App.tsx  index.css
ui/frontend/src/__tests__/: utils.test.ts  validation.test.ts
ui/frontend/src/api/: client.ts
ui/frontend/src/components/diff/: VersionDiff.tsx
ui/frontend/src/components/inference/: InferencePanel.tsx
ui/frontend/src/components/layout/: Header.tsx  KeyboardShortcutsHelp.tsx  Sidebar.tsx
ui/frontend/src/components/preview/: PreviewPanel.tsx  RenderedMessages.tsx
ui/frontend/src/components/prompts/: InputsForm.tsx  MetadataForm.tsx  PromptEditor.tsx  TemplateEditor.tsx
ui/frontend/src/components/testcases/: TestCaseList.tsx
ui/frontend/src/components/ui/: badge.tsx  button.tsx  index.ts  input.tsx  select.tsx  textarea.tsx
ui/frontend/src/hooks/: index.ts  useDarkMode.ts  useDiff.ts  useInference.ts  useKeyboardShortcuts.ts  usePrompts.ts  useSession.ts  useTestCases.ts
ui/frontend/src/lib/: utils.ts  validation.ts
ui/frontend/src/lib/codemirror/: autocomplete.ts  jinja-highlight.ts  setup.ts
ui/frontend/src/stores/: workbench.ts
ui/frontend/src/types/: index.ts  prompt.ts  session.ts  testcase.ts
(+2 files in other folders)
